# multi-choice-knapsack

./: .gitignore  pyproject.toml  setup.py  test_mckp.py
core/src/: Data.hpp  MAQ.h  Solver.hpp  SolverOptions.hpp  compute_path.hpp  convex_hull.hpp
mckp/: mckp.py  mckpbindings.pyx  mckpdefs.pxd
python-package/: setup.py  test_mckp.py
python-package/maq/: maq.py  maqbindings.pyx  maqdefs.pxd
python-package/mckp/: __init__.py  mckp.py  mckpdefs.pxd
